tasks with userID
